--- a/website/src/styles/helper_logbook.css
+++ b/website/src/styles/helper_logbook.css
@@ -527,6 +527,10 @@
     object-fit: cover;
 }
 
+.condensed-media .no-image {
+    color: var(--no-media-text);
+}
+
 .condensed-id-row {
     display: flex;
     justify-content: space-between;
